[package]
name = "tontsabot"
version = "0.1.0"
authors = ["Ilkka Poutanen <ilkka.poutanen@futurice.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = "1.0.41"
serde_json = "1.0.41"
serde_derive = "1.0.41"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
